@@ -1,3 +1,8 @@
+2008-03-01  Andreas Røsdal  <andreasr@gnome.org>
+
+	* src/lib/gsudoku.py: Fix crash when starting new game. 
+	Patch by my in bug #513894.
+
 2008-02-12  Thomas Hinkle  <tmhinkle@gmail.com>
 
 	* src/lib/gsudoku.py (GridDancer): Make grid un-focus-able while
